--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chrome-plugin-weather",
   "version": "1.0.0",
   "description": "Chrome Extension",
-  "main": "index.js",
+  "main": "src/manifest.json",
   "scripts": {
     "eslint": "eslint --ext .js src"
   },
