--- a/LoveTimeForChrome/manifest.json
+++ b/LoveTimeForChrome/manifest.json
@@ -37,7 +37,7 @@
   ],
 
   "web_accessible_resources": ["js/inject.js"],
-  "homepage_url": "https://www.bbtfax.com",
+  "homepage_url": "https://www.cyan522.com",
   "chrome_url_overrides": {
   },
   "omnibox": {
